codama-macros/tests/codama_attribute/node_directive/type_nodes/number_type_node/endian_already_set.fail.rs
use codama::codama;

#[codama(node(number_type(be, le, u32)))]
pub struct Test;

fn main() {}
